          "amd64", or "all").  Special values: "native" and
          "foreign".

        * ?multiarch(multiarch)

          Select packages with a multi-arch capability of multiarch
          (that is, either "foreign", "same", "allowed", or "none").

      - Default search (with no explicit term) now accepts "name:arch"
        patterns which match "?exact-name(name)?architecture(arch)".

      (Closes: #659079, #661744)
      (LP: #454941, #845136, #884945, #904486)

  * [curses]: Use libraries ("liba", "libb", etc.) with 'firstchar'
              grouping policy.  Removes crowding of the "l" group.

- Minor bugs:

  * [all]: List update now runs APT::Update hooks. (Closes: #476399)

  * [cmdline]: Actually silence progress messages with '-q2'.
               (Closes: #141719)

  * [all]: Fix various locking issues:

           - '[auto]clean' locks /var/cache/apt/archives;
           - 'update' locks /var/lib/apt/lists; (Closes: #653479)

  * [all]: Fix 'priority' cost level in resolver.  The values should
           have been negated but were not.  Thanks to Modestas Vainius
           for this one. (Closes: #608786)

  * [all]: Make ~VCURRENT etc. behave like ?version(CURRENT).  A
           latent bug was preventing the special values from being
           handled by the short form.

- Internal changes:

  * [all]: Update package lists using ListUpdate (from libapt-pkg).
           Now the process is identical to apt-get and other tools,
           reporting errors more correctly and running the APT::Update
           hooks.

  * [all]: Refactor various APT-related comparison functors which
           were spread all over the place.  There is now a single
           implementation of each which resides sanely in apt.h.

  * [curses]: Refactor duplicated make_{info,dep,ver}_screen + insert
              code.  Three new functions replace all standard uses of
              the previous code: show_info_screen, etc.

- Cosmetic and UI bugs:
