@@ -7492,6 +7492,16 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	      </listitem>
 	    </varlistentry>
 
+            <varlistentry>
+              <term><synopsis>architecture</synopsis></term>
+
+              <listitem>
+                <para>
+                  Groups packages according to their architecture.
+                </para>
+              </listitem>
+            </varlistentry>
+
 	    <varlistentry>
 	      <term><synopsis>deps</synopsis></term>
 
