@@ -57,6 +57,7 @@ resolve any problems.
 
       - Default search (with no explicit term) now accepts "name:arch"
         patterns which match "?exact-name(name)?architecture(arch)".
+      - Add architecture grouping policy.
 
       (Closes: #659079, #661744)
       (LP: #454941, #845136, #884945, #904486)
